# asyncfn_util

./: .gitignore  CMakeLists.txt  README.md  fntype.h  function_traits.h  lambda_enabler.h  main.cpp  staticify.h
src/asyncfn_util/: function_traits.h  lambda_enabler.h  observablify.h  omit.h  omitargs.h  pickargs.h  ppack.h  staticify.h
tests/: lambda_enabler.cpp  observablify.cpp  omitargs.cpp  pickargs.cpp  ppack.cpp  sample_async_function.cpp  sample_async_function.h  tests.h
